colors added and rounded

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <div id='container'>
-    <h1>Bueno, soy caja - Please draw something awesome!<h1>
-    <div id="canvas">
-    </div>
-      <div id="palette">
+    <h1>Draw something deliciously pixelated!<h1>
+    <div class='round' id="canvas">
+    </div><br>
+      <div class='round' id="palette">
       </div>
   </div>
 </body>
