--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <div class='round' id="canvas">
     </div><br>
       <div class='round' id="palette">
+      </div><br>
+      <div class='round' id='palette2'>
+        Pick your own color!
+        <input type='color' class='paintColor round' id='colorWell'>
+      </div>
       </div>
   </div>
 </body>
