bobs happy little trees

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
   <div id='container'>
-    <h1>Draw something deliciously pixelated!<h1>
+    <h1>“We don’t make mistakes. We just have happy accidents.”<h1>
     <div class='round' id="canvas">
     </div><br>
       <div class='round' id="palette">
-      </div><br>
+      </div>
       <div class='round' id='palette2'>
         Pick your own color!
         <input type='color' class='paintColor round' id='colorWell'>
